the new "configure headers" button and couple of minor fixes in the options dlg (seems to work)

--- a/src/gui/Makefile
+++ b/src/gui/Makefile
@@ -4,7 +4,8 @@ CWD = gui
 SRC = wxMApp.cpp wxMFrame.cpp wxFolderView.cpp wxMessageView.cpp \
 wxComposeView.cpp wxMainFrame.cpp wxIconManager.cpp wxFontManager.cpp wxMDialogs.cpp  \
 wxlwindow.cpp wxllist.cpp wxlparser.cpp wxMenuDefs.cpp wxOptionsDlg.cpp \
-wxFolderTree.cpp wxDialogLayout.cpp wxMFolderDialogs.cpp wxBrowseButton.cpp
+wxFolderTree.cpp wxDialogLayout.cpp wxMFolderDialogs.cpp wxBrowseButton.cpp \
+wxHeadersDialogs.cpp
 
 ifdef USE_WXTAB
 SRC += wxtab.cpp
