--- a/src/classes/Makefile
+++ b/src/classes/Makefile
@@ -5,7 +5,7 @@ include ../../makeopts
 
 CWD = classes
 SRC = MObject.cpp MApplication.cpp PathFinder.cpp Profile.cpp \
-      XFace.cpp kbList.cpp MFolder.cpp MEvent.cpp
+      XFace.cpp kbList.cpp MFolder.cpp MEvent.cpp MailCollector.cpp
 
 HDR = $(SRC:.cpp=.h)
 DEP = $(SRC:.cpp=.d)
