1. the autocollect mail timer stopped in OnExit() - timers can't be stopped from    the global dtor under Windows, it's too late and leads to a crash. 2. added missing icons 3. corrected bug with custom colour as wrote in config by wxColorBrowseButton    (new functions ParseColorString and GetColorName in miscutil.h, please use) 4. CC/BCC default settings work with "Reply", too (and better yet,    wxComposeView::SetAddresses doesn't crash when a field isn't shown) 5. new (trivial) function GetFullEmailAddress() in miscutil.h - please use 6. new option for combining multiple "Re:"s - either by suppressing all other    except first one completely or by adding the reply level in brackets. Please    test whether it works as expected (I still have some doubts...) 7. new MP_MSGVIEW_HEADERS and MP_MSGVIEW_ALL_HEADERS options (a colon separated    lists of headers to show in the msg view/all known headers) 8. ... and a dialog to configure them. 9. and configurable colours for the header names and values 10. "Expand" button in compose view expands other entries than "To" as well even     when they're chosen with mosue and not from kbd 11. folder properties dlg correctly remembers its last page, the sizes/positions     of a couple more dialog boxes is remembered. 12. compilation fixes for Windows compilation after latest mods by KB

--- a/res/M.rc
+++ b/res/M.rc
@@ -66,6 +66,7 @@ tb_mail_send	BITMAP	"tb_mail_send.bmp"
 tb_delete	BITMAP "delete.bmp"
 tb_undo		BITMAP "undo.bmp"
 tb_lookup	BITMAP "lookup.bmp"
+tb_editor	BITMAP "editor.bmp"
 
 // ADB tree ctrl image list (16x16) bitmaps
 adb_address	BITMAP "address.bmp"
