--- a/locale/Makefile
+++ b/locale/Makefile
@@ -30,13 +30,15 @@ install:
 	$(INSTALL) -d $(DATADIR)/locale
 	for i in $(FILES_MO); do $(INSTALL) -d $(DATADIR)/locale/`basename $$i .mo`/LC_MESSAGES; $(INSTALL_DATA) $$i $(DATADIR)/locale/`basename $$i .mo`/LC_MESSAGES/M.mo; done
 
-mergecat:
+msgcat:
 	$(MAKE) -C .. msgcat
+
+mergecat:
 	cp ../messages.po messages_po
-	msgmerge messages_po extra_po -o tmp.po && cat tmp.po | sed "1,$$ s/^#~ //g" <tmp.po > tmp && mv tmp message_po
+	msgmerge messages_po extra_po -o tmp.po && cat tmp.po | sed "1,$$ s/^#~ //g" <tmp.po > tmp && mv tmp messages_po
 	for i in $(FILES_PO); do msgmerge $$i messages_po -o tmp.po && mv tmp.po $$i; done
 
-.PHONY: all dep clean doc semistatic static allclean install msgcat mergecat mo-files
+.PHONY: all dep clean doc semistatic static allclean install msgcat mergecat mo-files 
 
 %.mo: %.po
 	$(MSGFMT) -o $@ $<
