--- a/src/Makefile
+++ b/src/Makefile
@@ -45,8 +45,8 @@ install: M
 	strip M
 	$(INSTALL_PROGRAM) M $(DATADIR)/$(CANONICAL_HOST)/bin
 	$(RM) -f $(BINDIR)/M $(DATADIR)/bin/M
-	ln -s -f ../share/Mahogany/$(CANONICAL_HOST)/bin/M $(BINDIR)
-	ln -s -f ../share/Mahogany/$(CANONICAL_HOST)/bin/M $(BINDIR)/mahogany
+	ln -f -s ../share/Mahogany/$(CANONICAL_HOST)/bin/M $(BINDIR)
+	ln -f -s ../share/Mahogany/$(CANONICAL_HOST)/bin/M $(BINDIR)/mahogany
 	$(INSTALL) -d $(DATADIR)/icons
 	for i in icons/*.xpm ; do $(INSTALL_DATA) $$i $(DATADIR)/icons; done
 	$(MAKE) -C Python $@
