Locale file generation and merging should work correctly now. German translations completed.

--- a/locale/Makefile
+++ b/locale/Makefile
@@ -35,7 +35,7 @@ msgcat:
 
 mergecat:
 	cp ../messages.po messages_po
-	msgmerge messages_po extra_po -o tmp.po && cat tmp.po | sed "1,$$ s/^\\#\\~ //g" <tmp.po > tmp && mv tmp messages_po
+	cat messages_po extra_po | sed "1,$$ s/^\\#\\~ //g" > tmp && mv tmp messages_po
 	for i in $(FILES_PO); do msgmerge $$i messages_po -o tmp.po && mv tmp.po $$i; done
 
 .PHONY: all dep clean doc semistatic static allclean install msgcat mergecat mo-files 
