--- a/makeopts.in
+++ b/makeopts.in
@@ -89,3 +89,6 @@ CXXFLAGS = @CXXFLAGS@ $(CPPFLAGS) $(DEF) $(INC)
 LDFLAGS = @LDFLAGS@
 
 LIBS=@LIBS@ $(CCLIENTLIB)
+LIBS_STATIC=@LIBS_STATIC@ $(CCLIENTLIB)
+GUI_LIBS=@GTK_LDFLAGS@
+GUI_LIBS_STATIC=@GUI_LIBS_STATIC@
