--- a/locale/Makefile
+++ b/locale/Makefile
@@ -31,6 +31,10 @@ dep depend:
 update:
 	$(MAKE) msgcat
 	$(MAKE) mergecat
+	$(MAKE) check
+
+check:
+	@for i in $(FILES_PO); do echo $$i:; msgfmt -v $$i ; done
 
 install: 
 	$(MAKE) all
@@ -46,7 +50,7 @@ mergecat:
 	cat messages_po extra_po | sed "1,$$ s/^\\#\\~ //g" > tmp && mv tmp messages_po
 	for i in $(FILES_PO); do msgmerge $$i messages_po -o tmp.po && mv tmp.po $$i; done
 
-.PHONY: all dep clean doc semistatic static allclean install msgcat mergecat mo-files  wxstd-mo-files update
+.PHONY: all dep clean doc semistatic static allclean install msgcat mergecat mo-files  wxstd-mo-files update check
 
 %.mo: %.po
 	$(MSGFMT) -o $@ $<
