--- a/configure.in
+++ b/configure.in
@@ -437,8 +437,8 @@ else
 fi
 AC_SUBST(GTK_LDFLAGS)
 GUI_LIBS_STATIC=`echo $GTK_LDFLAGS | sed '
-s/-lgtk/-Wl,-B,static -lgtk/g
-s/-lglib/-lglib -Wl,-B,dynamic/g'`
+s/-lgtk/-Wl,-Bstatic -lgtk/g
+s/-lglib/-lglib -Wl,-Bdynamic/g'`
 AC_SUBST(GUI_LIBS_STATIC)
 
 CPPFLAGS="$CPPFLAGS $GTK_CFLAGS"
@@ -579,7 +579,7 @@ LIBS="$LIBS $PYTHON_LIBS $LIB_EFENCE $LIB_DMALLOC $LIB_PNG $LIB_JPEG"
 CXXFLAGS="$CXXFLAGS $DBGFLAGS"
 CFLAGS="$CFLAGS $DBGFLAGS"
 
-LIBS_STATIC=`echo $LIBS | sed 's/-lwx_gtk2/-Wl,-B,static -lwx_gtk2 -Wl,-B,dynamic/g'`
+LIBS_STATIC=`echo $LIBS | sed 's/-lwx_gtk2/-Wl,-Bstatic -lwx_gtk2 -Wl,-Bdynamic/g'`
 AC_SUBST(LIBS_STATIC)
 
 
