make install now installs a sample M.conf file.

--- a/extra/install/Makefile
+++ b/extra/install/Makefile
@@ -18,6 +18,7 @@ install:
 	$(INSTALL_DATA) afm/*.afm $(DATADIR)/afm
 	$(INSTALL_DATA) newmail.wav $(DATADIR)
 #	$(INSTALL_DATA) mailcap $(DATADIR)
+	$(INSTALL_DATA) M.conf $(DATADIR)
 
 clean:
 
