--- a/src/wx/generic/Makefile
+++ b/src/wx/generic/Makefile
@@ -5,17 +5,19 @@
 # If you change the number of subdirectories, make sure you modify Makefile, too!
 
 CWD = wx
-SRC = 
+SRC = persctrl.cpp
 HDR = $(SRC:.cpp=.h)
 DEP = $(SRC:.cpp=.d)
 
-TARGETS = 
+TARGETS = $(SRC:.cpp=.o)
 
-clean: $(MAKE) -C generic stdclean
+all: $(TARGETS)
+
+clean: stdclean
 
 .PHONY: clean all
 
-include ../../makeopts
-include ../../makerules
+include ../../../makeopts
+include ../../../makerules
 include .depend
 
