1. added french translations for wxWin (not up-to-date) 2. run msgfmt with -v option - very helpful to find problems with the translations 3. added missing '\n' to de.po

--- a/locale/Makefile
+++ b/locale/Makefile
@@ -54,7 +54,7 @@ mergecat:
 .PHONY: all dep clean doc semistatic static allclean install msgcat mergecat mo-files  wxstd-mo-files update check
 
 %.mo: %.po
-	$(MSGFMT) -o $@ $<
+	$(MSGFMT) -v -o $@ $<
 
 
 
