Playing with modules.

--- a/src/Makefile
+++ b/src/Makefile
@@ -25,7 +25,7 @@ Mx:	libM.so
 	$(LINK) -o M -L. $(LDFLAGS) -lM $(LDFLAGS) $(GUI_LIBS) $(LIBS)
 
 libM.so:
-	$(CXX) -shared $(MOBJS) $(LDFLAGS) -lswigpy $(NONPLIBS) -o libM.so
+	$(CXX) -shared $(MOBJS) $(LDFLAGS) $(NONPLIBS) -o libM.so
 
 # build the binary which is statically linked to wxGTK, dynamically to
 # everything else
