ASMailFolder moreless complete and functional - only ifndef USE_THRADS ! Modules work and have a C interface now. Configurable list of modules to load at startup.

--- a/configure.in
+++ b/configure.in
@@ -32,7 +32,7 @@ DEFAULT_USE_DMALLOC=0
 DEFAULT_USE_DEBUG=0
 DEFAULT_USE_WXDEBUG=0
 DEFAULT_USE_PYTHON=1
-DEFAULT_USE_THREADS=1
+DEFAULT_USE_THREADS=0
 DEFAULT_USE_KDOC=0
 DEFAULT_USE_DOCXX=1
 DEFAULT_USE_EXPERIMENTAL=0
@@ -157,6 +157,9 @@ else
 	AC_SUBST(LIBTOOL)
 fi
 AC_SUBST(MAKE_LIBTOOL)
+
+dnl check for M4
+AC_PATH_PROG(M4, m4)
 
 dnl
 dnl Here we disable support for exceptions if the compiler is gcc and
