--- a/src/mail/Makefile
+++ b/src/mail/Makefile
@@ -1,7 +1,8 @@
 # Makefile for src/mail directory
 
 CWD = mail 
-SRC = MailFolder.cpp Message.cpp MailFolderCC.cpp MessageCC.cpp SendMessageCC.cpp
+SRC = MailFolder.cpp Message.cpp MailFolderCC.cpp MessageCC.cpp SendMessageCC.cpp ASMailFolder.cpp
+
 HDR = $(SRC:.cpp=.h)
 DEP = $(SRC:.cpp=.d)
 OBJ = $(SRC:.cpp=.o)
@@ -11,10 +12,6 @@ include ../../makeopts
 LINK = ../util/strutil.o ../classes/CommonBase.o $(CCLIENTLIB)
 
 TARGETS = $(OBJ)
-
-ifdef EXPERIMENTAL
-TARGETS += ASMailFolder.o
-endif
 
 all:	$(TARGETS)
 
